@@ -75,6 +75,7 @@
 	by using tail command.
 	(CygbuildCmdInstallCheckPerlLibraries): Adjust displayed
 	message.
+	(CygbuildInstallFixInterpreterPerl): Use variable retval.
 
 	[ commit: 21c6baa ]
 
